# src/pkg/server/handler/apihandler/embedded/openapi.json
@@ -688,7 +688,7 @@
     },
     "/file/upload": {
       "post": {
-        "description": "Upload a static file to DB for later use",
+        "description": "Upload a static file for later use",
         "summary": "Upload a static file",
         "operationId": "uploadFile",
         "tags": [
@@ -717,7 +717,7 @@
     },
     "/file/download/{fileName}": {
       "get": {
-        "description": "Download a static file from DB",
+        "description": "Download a static file",
         "summary": "Download a static file",
         "operationId": "downloadFile",
         "tags": [
@@ -1543,17 +1543,12 @@
       "FileSaveRequest": {
         "type": "object",
         "properties": {
-          "fileName": {
-            "type": "string",
-            "example": "exampleFile.pdf"
-          },
           "file": {
             "type": "string",
             "format": "binary"
           }
         },
         "required": [
-          "fileName",
           "file"
         ]
       },
